k8s-manifest/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: default
  labels:
    app: petclinic
spec:
  ports:
  - port: 8080
  selector:
    app: petclinic
  type: ClusterIP
