k8s-manifest/petclinic/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: petclinic-svc
            servicePort: 8080
